Fix: Fix lock icon alignment (fixes #237)

--- a/less/pageLevelProgress.less
+++ b/less/pageLevelProgress.less
@@ -25,6 +25,10 @@
     margin-inline-start: calc(~'25% - 1rem');
   }
 
+  &__item-btn.is-locked .pagelevelprogress__item-icon {
+    margin-inline-start: auto;
+  }
+
   &__item-btn:not(.is-locked) .pagelevelprogress__item-icon {
     display: none;
   }
